core/src/main/java/com/github/srec/command/parser/antlr/srecParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/victor/srec/core/src/main/antlr/srec.g 2010-05-13 17:06:38

package com.github.srec.command.parser.antlr;


import org.antlr.runtime.*;
import org.antlr.runtime.tree.*;

public class srecParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "SCRIPT", "REQUIRE", "ASSIGN", "METHOD_CALL_OR_VARREF", "METHOD_CALL", "METHOD_DEF", "METHOD_DEF_PARAMS", "METHOD_BODY", "LITNUMBER", "LITBOOLEAN", "LITSTRING", "LITNIL", "QNAME", "STRING", "NEWLINE", "ID", "NUMBER", "BOOLEAN", "NULL", "DIGIT", "LETTER", "ALPHANUM", "WS", "COMMENT", "'require'", "'('", "')'", "','", "'='", "'def'", "'end'"
    };
    public static final int SCRIPT=4;
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int LETTER=24;
    public static final int METHOD_DEF=9;
    public static final int NULL=22;
    public static final int NUMBER=20;
    public static final int ID=19;
    public static final int EOF=-1;
    public static final int REQUIRE=5;
    public static final int METHOD_CALL=8;
    public static final int ALPHANUM=25;
    public static final int METHOD_DEF_PARAMS=10;
    public static final int LITNUMBER=12;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=26;
    public static final int BOOLEAN=21;
    public static final int QNAME=16;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int NEWLINE=18;
    public static final int METHOD_BODY=11;
    public static final int ASSIGN=6;
    public static final int LITBOOLEAN=13;
    public static final int LITNIL=15;
    public static final int METHOD_CALL_OR_VARREF=7;
    public static final int DIGIT=23;
    public static final int COMMENT=27;
    public static final int STRING=17;
    public static final int LITSTRING=14;

    // delegates
    // delegators


        public srecParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public srecParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return srecParser.tokenNames; }
    public String getGrammarFileName() { return "/home/victor/srec/core/src/main/antlr/srec.g"; }


    public static class script_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "script"
    // /home/victor/srec/core/src/main/antlr/srec.g:40:1: script : ( require )* ( script_stmt_block )? -> ^( SCRIPT ( require )* ( script_stmt_block )? ) ;
    public final srecParser.script_return script() throws RecognitionException {
        srecParser.script_return retval = new srecParser.script_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        srecParser.require_return require1 = null;

        srecParser.script_stmt_block_return script_stmt_block2 = null;


        RewriteRuleSubtreeStream stream_require=new RewriteRuleSubtreeStream(adaptor,"rule require");
        RewriteRuleSubtreeStream stream_script_stmt_block=new RewriteRuleSubtreeStream(adaptor,"rule script_stmt_block");
        try {
            // /home/victor/srec/core/src/main/antlr/srec.g:41:2: ( ( require )* ( script_stmt_block )? -> ^( SCRIPT ( require )* ( script_stmt_block )? ) )
            // /home/victor/srec/core/src/main/antlr/srec.g:41:4: ( require )* ( script_stmt_block )?
            {
            // /home/victor/srec/core/src/main/antlr/srec.g:41:4: ( require )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==28) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/victor/srec/core/src/main/antlr/srec.g:41:4: require
            	    {
            	    pushFollow(FOLLOW_require_in_script117);
            	    require1=require();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_require.add(require1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // /home/victor/srec/core/src/main/antlr/srec.g:41:13: ( script_stmt_block )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ID||LA2_0==33) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/victor/srec/core/src/main/antlr/srec.g:41:13: script_stmt_block
                    {
                    pushFollow(FOLLOW_script_stmt_block_in_script120);
                    script_stmt_block2=script_stmt_block();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_script_stmt_block.add(script_stmt_block2.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: script_stmt_block, require
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 42:3: -> ^( SCRIPT ( require )* ( script_stmt_block )? )
            {
                // /home/victor/srec/core/src/main/antlr/srec.g:42:6: ^( SCRIPT ( require )* ( script_stmt_block )? )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(SCRIPT, "SCRIPT"), root_1);

                // /home/victor/srec/core/src/main/antlr/srec.g:42:15: ( require )*
                while ( stream_require.hasNext() ) {
                    adaptor.addChild(root_1, stream_require.nextTree());

                }
                stream_require.reset();
                // /home/victor/srec/core/src/main/antlr/srec.g:42:24: ( script_stmt_block )?
                if ( stream_script_stmt_block.hasNext() ) {
                    adaptor.addChild(root_1, stream_script_stmt_block.nextTree());

                }
                stream_script_stmt_block.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "script"

    public static class require_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "require"
    // /home/victor/srec/core/src/main/antlr/srec.g:45:1: require : 'require' STRING NEWLINE -> ^( REQUIRE STRING ) ;
    public final srecParser.require_return require() throws RecognitionException {
        srecParser.require_return retval = new srecParser.require_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal3=null;
        Token STRING4=null;
        Token NEWLINE5=null;

        CommonTree string_literal3_tree=null;
        CommonTree STRING4_tree=null;
        CommonTree NEWLINE5_tree=null;
        RewriteRuleTokenStream stream_NEWLINE=new RewriteRuleTokenStream(adaptor,"token NEWLINE");
        RewriteRuleTokenStream stream_STRING=new RewriteRuleTokenStream(adaptor,"token STRING");
        RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");

        try {
            // /home/victor/srec/core/src/main/antlr/srec.g:46:2: ( 'require' STRING NEWLINE -> ^( REQUIRE STRING ) )
            // /home/victor/srec/core/src/main/antlr/srec.g:46:4: 'require' STRING NEWLINE
            {
            string_literal3=(Token)match(input,28,FOLLOW_28_in_require151); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_28.add(string_literal3);

            STRING4=(Token)match(input,STRING,FOLLOW_STRING_in_require153); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_STRING.add(STRING4);

            NEWLINE5=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_require155); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_NEWLINE.add(NEWLINE5);



            // AST REWRITE
            // elements: STRING
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 47:3: -> ^( REQUIRE STRING )
            {
                // /home/victor/srec/core/src/main/antlr/srec.g:47:6: ^( REQUIRE STRING )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(REQUIRE, "REQUIRE"), root_1);

                adaptor.addChild(root_1, stream_STRING.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "require"

    public static class script_stmt_block_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "script_stmt_block"
    // /home/victor/srec/core/src/main/antlr/srec.g:50:1: script_stmt_block : ( expression ( NEWLINE | EOF ) )+ ;
    public final srecParser.script_stmt_block_return script_stmt_block() throws RecognitionException {
        srecParser.script_stmt_block_return retval = new srecParser.script_stmt_block_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token NEWLINE7=null;
        Token EOF8=null;
        srecParser.expression_return expression6 = null;


        CommonTree NEWLINE7_tree=null;
        CommonTree EOF8_tree=null;

        try {
            // /home/victor/srec/core/src/main/antlr/srec.g:51:2: ( ( expression ( NEWLINE | EOF ) )+ )
            // /home/victor/srec/core/src/main/antlr/srec.g:51:4: ( expression ( NEWLINE | EOF ) )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // /home/victor/srec/core/src/main/antlr/srec.g:51:4: ( expression ( NEWLINE | EOF ) )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ID||LA4_0==33) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /home/victor/srec/core/src/main/antlr/srec.g:51:5: expression ( NEWLINE | EOF )
            	    {
            	    pushFollow(FOLLOW_expression_in_script_stmt_block179);
            	    expression6=expression();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, expression6.getTree());
            	    // /home/victor/srec/core/src/main/antlr/srec.g:51:16: ( NEWLINE | EOF )
            	    int alt3=2;
            	    int LA3_0 = input.LA(1);

            	    if ( (LA3_0==NEWLINE) ) {
            	        alt3=1;
            	    }
            	    else if ( (LA3_0==EOF) ) {
            	        alt3=2;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 3, 0, input);

            	        throw nvae;
            	    }
            	    switch (alt3) {
            	        case 1 :
            	            // /home/victor/srec/core/src/main/antlr/srec.g:51:17: NEWLINE
            	            {
            	            NEWLINE7=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_script_stmt_block182); if (state.failed) return retval;
            	            if ( state.backtracking==0 ) {
            	            NEWLINE7_tree = (CommonTree)adaptor.create(NEWLINE7);
            	            adaptor.addChild(root_0, NEWLINE7_tree);
            	            }

            	            }
            	            break;
            	        case 2 :
            	            // /home/victor/srec/core/src/main/antlr/srec.g:51:27: EOF
            	            {
            	            EOF8=(Token)match(input,EOF,FOLLOW_EOF_in_script_stmt_block186); if (state.failed) return retval;

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "script_stmt_block"

    public static class expression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expression"
    // /home/victor/srec/core/src/main/antlr/srec.g:54:1: expression : ( method_call_or_varref | assignment | method_def );
    public final srecParser.expression_return expression() throws RecognitionException {
        srecParser.expression_return retval = new srecParser.expression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        srecParser.method_call_or_varref_return method_call_or_varref9 = null;

        srecParser.assignment_return assignment10 = null;

        srecParser.method_def_return method_def11 = null;



        try {
            // /home/victor/srec/core/src/main/antlr/srec.g:55:2: ( method_call_or_varref | assignment | method_def )
            int alt5=3;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==ID) ) {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==EOF||(LA5_1>=STRING && LA5_1<=NULL)||LA5_1==29) ) {
                    alt5=1;
                }
                else if ( (LA5_1==32) ) {
                    alt5=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA5_0==33) ) {
                alt5=3;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // /home/victor/srec/core/src/main/antlr/srec.g:55:4: method_call_or_varref
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_method_call_or_varref_in_expression202);
                    method_call_or_varref9=method_call_or_varref();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, method_call_or_varref9.getTree());

                    }
                    break;
                case 2 :
                    // /home/victor/srec/core/src/main/antlr/srec.g:55:28: assignment
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_assignment_in_expression206);
                    assignment10=assignment();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assignment10.getTree());

                    }
                    break;
                case 3 :
                    // /home/victor/srec/core/src/main/antlr/srec.g:55:41: method_def
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_method_def_in_expression210);
                    method_def11=method_def();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, method_def11.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expression"

    public static class method_call_or_varref_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "method_call_or_varref"
    // /home/victor/srec/core/src/main/antlr/srec.g:58:1: method_call_or_varref options {backtrack=true; } : ( ID -> ^( METHOD_CALL_OR_VARREF ID ) | ID '(' ')' -> ^( METHOD_CALL ID ) | ID '(' method_call_param ( ',' method_call_param )* ')' -> ^( METHOD_CALL ID ( method_call_param )+ ) | ID method_call_param ( ',' method_call_param )* -> ^( METHOD_CALL ID ( method_call_param )+ ) );
    public final srecParser.method_call_or_varref_return method_call_or_varref() throws RecognitionException {
        srecParser.method_call_or_varref_return retval = new srecParser.method_call_or_varref_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID12=null;
        Token ID13=null;
        Token char_literal14=null;
        Token char_literal15=null;
        Token ID16=null;
        Token char_literal17=null;
        Token char_literal19=null;
        Token char_literal21=null;
        Token ID22=null;
        Token char_literal24=null;
        srecParser.method_call_param_return method_call_param18 = null;

        srecParser.method_call_param_return method_call_param20 = null;

        srecParser.method_call_param_return method_call_param23 = null;

        srecParser.method_call_param_return method_call_param25 = null;


        CommonTree ID12_tree=null;
        CommonTree ID13_tree=null;
        CommonTree char_literal14_tree=null;
        CommonTree char_literal15_tree=null;
        CommonTree ID16_tree=null;
        CommonTree char_literal17_tree=null;
        CommonTree char_literal19_tree=null;
        CommonTree char_literal21_tree=null;
        CommonTree ID22_tree=null;
        CommonTree char_literal24_tree=null;
        RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
        RewriteRuleSubtreeStream stream_method_call_param=new RewriteRuleSubtreeStream(adaptor,"rule method_call_param");
        try {
            // /home/victor/srec/core/src/main/antlr/srec.g:60:2: ( ID -> ^( METHOD_CALL_OR_VARREF ID ) | ID '(' ')' -> ^( METHOD_CALL ID ) | ID '(' method_call_param ( ',' method_call_param )* ')' -> ^( METHOD_CALL ID ( method_call_param )+ ) | ID method_call_param ( ',' method_call_param )* -> ^( METHOD_CALL ID ( method_call_param )+ ) )
            int alt8=4;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==ID) ) {
                switch ( input.LA(2) ) {
                case 29:
                    {
                    int LA8_2 = input.LA(3);

                    if ( (LA8_2==30) ) {
                        alt8=2;
                    }
                    else if ( (LA8_2==STRING||(LA8_2>=ID && LA8_2<=NULL)) ) {
                        alt8=3;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 8, 2, input);

                        throw nvae;
                    }
                    }
                    break;
                case STRING:
                case ID:
                case NUMBER:
                case BOOLEAN:
                case NULL:
                    {
                    alt8=4;
                    }
                    break;
                case EOF:
                case NEWLINE:
                case 30:
                case 31:
                    {
                    alt8=1;
                    }
                    break;
                default:
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 1, input);

                    throw nvae;
                }

            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }
            switch (alt8) {
                case 1 :
                    // /home/victor/srec/core/src/main/antlr/srec.g:60:4: ID
                    {
                    ID12=(Token)match(input,ID,FOLLOW_ID_in_method_call_or_varref229); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID12);



                    // AST REWRITE
                    // elements: ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 61:3: -> ^( METHOD_CALL_OR_VARREF ID )
                    {
                        // /home/victor/srec/core/src/main/antlr/srec.g:61:6: ^( METHOD_CALL_OR_VARREF ID )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(METHOD_CALL_OR_VARREF, "METHOD_CALL_OR_VARREF"), root_1);

                        adaptor.addChild(root_1, stream_ID.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // /home/victor/srec/core/src/main/antlr/srec.g:62:4: ID '(' ')'
                    {
                    ID13=(Token)match(input,ID,FOLLOW_ID_in_method_call_or_varref244); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID13);

                    char_literal14=(Token)match(input,29,FOLLOW_29_in_method_call_or_varref246); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_29.add(char_literal14);

                    char_literal15=(Token)match(input,30,FOLLOW_30_in_method_call_or_varref248); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_30.add(char_literal15);



                    // AST REWRITE
                    // elements: ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 63:3: -> ^( METHOD_CALL ID )
                    {
                        // /home/victor/srec/core/src/main/antlr/srec.g:63:6: ^( METHOD_CALL ID )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(METHOD_CALL, "METHOD_CALL"), root_1);

                        adaptor.addChild(root_1, stream_ID.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 3 :
                    // /home/victor/srec/core/src/main/antlr/srec.g:64:4: ID '(' method_call_param ( ',' method_call_param )* ')'
                    {
                    ID16=(Token)match(input,ID,FOLLOW_ID_in_method_call_or_varref263); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID16);

                    char_literal17=(Token)match(input,29,FOLLOW_29_in_method_call_or_varref265); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_29.add(char_literal17);

                    pushFollow(FOLLOW_method_call_param_in_method_call_or_varref267);
                    method_call_param18=method_call_param();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_method_call_param.add(method_call_param18.getTree());
                    // /home/victor/srec/core/src/main/antlr/srec.g:64:29: ( ',' method_call_param )*
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==31) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                    	case 1 :
                    	    // /home/victor/srec/core/src/main/antlr/srec.g:64:30: ',' method_call_param
                    	    {
                    	    char_literal19=(Token)match(input,31,FOLLOW_31_in_method_call_or_varref270); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_31.add(char_literal19);

                    	    pushFollow(FOLLOW_method_call_param_in_method_call_or_varref272);
                    	    method_call_param20=method_call_param();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_method_call_param.add(method_call_param20.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop6;
                        }
                    } while (true);

                    char_literal21=(Token)match(input,30,FOLLOW_30_in_method_call_or_varref276); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_30.add(char_literal21);



                    // AST REWRITE
                    // elements: ID, method_call_param
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 65:3: -> ^( METHOD_CALL ID ( method_call_param )+ )
                    {
                        // /home/victor/srec/core/src/main/antlr/srec.g:65:6: ^( METHOD_CALL ID ( method_call_param )+ )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(METHOD_CALL, "METHOD_CALL"), root_1);

                        adaptor.addChild(root_1, stream_ID.nextNode());
                        if ( !(stream_method_call_param.hasNext()) ) {
                            throw new RewriteEarlyExitException();
                        }
                        while ( stream_method_call_param.hasNext() ) {
                            adaptor.addChild(root_1, stream_method_call_param.nextTree());

                        }
                        stream_method_call_param.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 4 :
                    // /home/victor/srec/core/src/main/antlr/srec.g:66:4: ID method_call_param ( ',' method_call_param )*
                    {
                    ID22=(Token)match(input,ID,FOLLOW_ID_in_method_call_or_varref294); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID22);

                    pushFollow(FOLLOW_method_call_param_in_method_call_or_varref296);
                    method_call_param23=method_call_param();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_method_call_param.add(method_call_param23.getTree());
                    // /home/victor/srec/core/src/main/antlr/srec.g:66:25: ( ',' method_call_param )*
                    loop7:
                    do {
                        int alt7=2;
                        int LA7_0 = input.LA(1);

                        if ( (LA7_0==31) ) {
                            alt7=1;
                        }


                        switch (alt7) {
                    	case 1 :
                    	    // /home/victor/srec/core/src/main/antlr/srec.g:66:26: ',' method_call_param
                    	    {
                    	    char_literal24=(Token)match(input,31,FOLLOW_31_in_method_call_or_varref299); if (state.failed) return retval; 
                    	    if ( state.backtracking==0 ) stream_31.add(char_literal24);

                    	    pushFollow(FOLLOW_method_call_param_in_method_call_or_varref301);
                    	    method_call_param25=method_call_param();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_method_call_param.add(method_call_param25.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop7;
                        }
                    } while (true);



                    // AST REWRITE
                    // elements: ID, method_call_param
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 67:3: -> ^( METHOD_CALL ID ( method_call_param )+ )
                    {
                        // /home/victor/srec/core/src/main/antlr/srec.g:67:6: ^( METHOD_CALL ID ( method_call_param )+ )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(METHOD_CALL, "METHOD_CALL"), root_1);
